<resources>
    <string name="app_name">校园视频</string>

    <string name="action_settings">设置</string>

    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>

    <string name="video_summary_language">语言</string>
    <string name="video_summary_public">上映日期</string>
    <string name="video_summary_summary">简介</string>
    <string name="search_poster">搜索海报</string>
    <string name="video_poster">海报</string>
    <string name="video_play">播放</string>
    <string name="home_banner">首页Banner</string>
    <string name="classify">分类</string>
    <string name="more">更多</string>
    <string name="poster">海报</string>
    <string name="banner">Banner</string>

    <string name="label_campus">设置服务器</string>
    <string name="refresh">刷新</string>
    <string name="sort_by_name">按名称排序</string>
    <string name="sort_by_iq">智能排序</string>
    <string name="show_all">全部显示</string>
    <string name="please_input_campus_name">请输入学校名称</string>
    <string name="name_type">类型：</string>
    <string name="name_actor">演员：</string>
    <string name="name_director">导演：</string>
    <string name="name_date">日期：</string>
    <string name="search">搜索</string>
    <string name="offlining">离线中</string>
    <string name="download">下载</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="delete">删除</string>
    <string name="start_all">全部开始</string>
    <string name="pause_all">全部暂停</string>
    <string name="episode">剧集</string>
    <string name="offline">离线视频</string>
    <string name="local_media">本地视频</string>

    <string name="server_inaccessible">服务器无法连接</string>
    <string name="not_mind">不在提醒</string>
    <string name="ignore">忽略</string>
    <string name="switch_server">切换服务器(侧滑菜单->设置)</string>
    <string name="to_switch">去切换</string>
    <string name="cancel">取消</string>

    <string name="server_logo">服务器图标</string>
    <string name="pause_or_play">暂停/播放</string>
    <string name="storage_tips">需要存储权限保存视频文件</string>
    <string name="collection">收藏</string>
    <string name="add">添加</string>
    <string name="save">保存</string>

    <string name="label_add_campus">添加服务器</string>
</resources>
